# realtime-pose-estimation

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md
assets/yolox_s_traning_assets/: README.md
assets/yolox_s_traning_assets/only_pallet_models/: yolox_s_loco_cvat_1245.py
assets/yolox_s_traning_assets/only_pallet_void_models/: yolox_s_only_pallet_void.py
data/: 20220319_112640.bag.REMOVED.git-id  20220319_112823.bag.REMOVED.git-id  20220319_112907.bag.REMOVED.git-id
include/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
include/Logger/Logger/: Logger.cc  Logger.h
include/ObjectDetection/: CMakeLists.txt  ObjectDetection.cc  ObjectDetection.cpp  ObjectDetection.h
include/ObjectDetection/ObjectDetection/: ObjectDetection.cc  ObjectDetection.h
include/PoseEstimation/: CMakeLists.txt  PoseEstimation.cc  PoseEstimation.cpp  PoseEstimation.h
include/PoseEstimation/PoseEstimation/: PoseEstimation.cc  PoseEstimation.h
models/yolo_s_pallet/: yolo_s_only_pallet_14epoch_o10.mapping  yolo_s_only_pallet_14epoch_o10.xml
models/yolox_s/: yolox_s.mapping  yolox_s.xml
models/yolox_s_only_pallet_294epoch_o10/: yolox_s_only_pallet_294epoch_o10.xml
models/yolox_s_only_pallet_void_300epoch_o10/: yolox_s_only_pallet_void_300epoch_lim_o10.xml
src/: PoseEstimation.cpp  main.cc  main.cpp
